boinc (4.70-1) experimental; urgency=low

  * UNRELEASED
  * New upstream release.
  * Built with g++-4.0.
  * debian/boinc-client.init:
    - Added status option to init.d script as proposed in Debian bug #291148.
  * debian/control.in:
    - Removed Build-Conflicts on automake1.4 and automake1.6, because we invoke
      aclocal-1.9 and automake-1.9 in debian/rules directly now.
    - Bumped Standards-Version from 3.6.1 to 3.6.2, no changes required.
  * debian/rules:
    - Added '--enable-client' and '--enable-server' as configure flags.
  * Added missing options to boinc-client manpage.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Fri, 10 Jun 2005 17:25:52 +0200

boinc (4.45a-1) experimental; urgency=low

  * New upstream release.
  * debian/control.in:
    - Moved all packages into non-free section, because RSAEuro's license
      does not comply with DFSG #6 (No Discrimination Against Fields of
      Endeavor). The RSAEuro license is included in debian/copyright.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Fri, 10 Jun 2005 16:39:21 +0200

boinc (4.40-1) experimental; urgency=low

  * New upstream release.
  * Disabled the boinc-manager package, because it build depends on
    wxWidgets 2.6 which is not in Debian yet.
  * debian/control.in:
    - Added Steffen Moeller and myself to Uploaders.
    - Build-Depend on libmysqlclient12-dev instead of the virtual package
      libmysqlclient-dev.
  * debian/boinc-manager.menu:
    - Added BOINC, Science and Monitoring to the 'hints' field.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Fri, 13 May 2005 23:30:01 +0200

boinc (4.27-1) experimental; urgency=low

  * New upstream release.
  * debian/control.in:
    - Added automake1.9 and autoconf (>> 2.52) to Build-Depends.
    - Added automake1.6 to Build-Conflicts.
  * Renamed boinc-gui package to boinc-manager. The BOINC manager binary was
    renamed from 'boinc_gui' to 'boincmgr', the BOINC core client binary was