@@ -2,7 +2,7 @@
 
 * Write a nice long description for all BOINC packages.
 
-* Makes the RSAEURO TOOLKIT LICENSE AGREEMENT boinc non-free?
+* Makes the RSAEURO TOOLKIT LICENSE AGREEMENT boinc non-free? Yes!
   Fortunately the BOINC developers are considering using another crypto
   library: http://www.ssl.berkeley.edu/pipermail/boinc_dev/2005-May/002382.html
 
