@@ -5,7 +5,7 @@
 # This file is licensed under the terms of the GNU General Public License,
 # Version 2 or any later version published by the Free Software Foundation.
 #
-# $LastChangedDate: 2005-06-25 13:43:40 +0200 (Sat, 25 Jun 2005) $
+# $LastChangedDate$
 
 set -e
 
