@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian BOINC Maintainers <pkg-boinc-devel@lists.alioth.debian.org>
 Uploaders: Frank S. Thomas <frank@thomas-alfeld.de>, Steffen Moeller <moeller@pzr.uni-rostock.de>
 Standards-Version: 3.6.2
-Build-Depends: cdbs (>= 0.4.23-1.1), build-essential, debhelper (>= 4.1.0), libmysqlclient12-dev, freeglut-dev, libwxgtk2.4-dev, automake1.9 (>= 1.9.3), autoconf (>= 2.59), docbook2x
+Build-Depends: cdbs (>= 0.4.23-1.1), debhelper (>= 4.1.0), libmysqlclient12-dev, freeglut-dev, libwxgtk2.4-dev, automake1.9 (>= 1.9.3), autoconf (>= 2.59), docbook2x
 
 Package: boinc-client
 Section: non-free/net
